--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="C:\Users\HumairaBashir\Desktop\challenge\style.css">
 </head>
 <body>
+  <div class="most-outer">
   <div class="stair-border">
   <div class="stair-inner"></div>
+  </div>
 </div>
 </body>
 </html>
